# cuDLA_Lightnet

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: config_parser.h  cuda_utils.hpp  cudla_context_standalone.h  cudla_lightnet.hpp
include/nvsci_headers/: nvsci_headers_README.txt  nvscibuf.h  nvscierror.h  nvscievent.h  nvsciipc.cfg  nvsciipc.h  nvscistream_api.h  nvscistream_types.h  nvscisync.h
script/: build_dla.sh
src/: config_parser.cc  cudla_context_standalone.cc  cudla_lightnet.cc  main.cc
